# ml-regression-problem-data-centric-way

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: ml-regression-problem-data-centric-way.ipynb
regression_problem_data_centric_way/: __init__.py  dataset.py  features.py  plots.py
regression_problem_data_centric_way/modeling/: predict.py  train.py
