[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "regression_problem_data_centric_way"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Jailson Evora" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["regression_problem_data_centric_way"]
include = ["pyproject.toml", "regression_problem_data_centric_way/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["regression_problem_data_centric_way"]
force-sort-within-sections = true

